--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,7 +15,6 @@ html {
 	overflow-y: hidden;
 }
 .navbar {
-	padding: 1rem;
 	background: white !important;
 	border-bottom: solid 1px;
 	border-top: solid 1px;
@@ -53,7 +52,7 @@ body > div {
 .btn {
 	margin: 10px;
 	padding: 30px;
-	font-size:30px 60px;
+	font-size: 30px 60px;
 	text-align: center;
 	text-transform: uppercase;
 	transition: 0.5s;
@@ -62,16 +61,26 @@ body > div {
 	/* text-shadow: 0px 0px 10px rgba(0,0,0,0.2);*/
 	box-shadow: 0 0 20px #eee;
 	border-radius: 100px;
-	border:none
+	border: none;
 }
 .btn:hover {
 	background-position: right center; /* change the direction of the change here */
 }
 .btn {
-	background-image: linear-gradient(to right, #E0BBE4 0%, #FEC8D8 51%, #E0BBE4 100%);
-  }
+	background-image: linear-gradient(to right, #e0bbe4 0%, #fec8d8 51%, #e0bbe4 100%);
+}
 .container {
 	width: 100%;
+	margin: 0 0.5rem;
+}
+.navbar {
+	padding: 0;
+}
+.navbar span {
+	color: #957dad;
+}
+.navbar > .container {
+	justify-content: flex-start;
 }
 .navbar-collapse {
 	flex-grow: 0;
@@ -106,8 +115,8 @@ a.nav-link:hover::after {
 	transform: scaleX(1);
 	transform-origin: left;
 }
-a.navbar-brand {
-	width: 200px;
+.navbar-brand img {
+	width: 120px;
 	height: auto;
 }
 .navbar-brand::hover {
@@ -116,8 +125,8 @@ a.navbar-brand {
 	transition-property: transform;
 }
 .row {
-	display:flex;
-	flex-direction:row;
+	display: flex;
+	flex-direction: row;
 	justify-content: center;
 }
 .col {
@@ -127,8 +136,36 @@ a.navbar-brand {
 	justify-content: center;
 }
 .col img {
-	width:500px;
-	height:auto;
-	margin-right: 250px;
-	margin-bottom: 100px
+	width: 420px;
+	height: auto;
+	margin-right: 330px;
+	margin-bottom: 100px;
+}
+body > div > div > div:nth-child(1) {
+	margin-bottom: 80px;
+}
+navbar-nav me-auto mb-2 mb-lg-0 {
+	display: flex;
+}
+#Saf > img,
+#Dally > img,
+#Yomax > img,
+#Ecliptics > img,
+#Moon > img,
+#Notacya > img,
+#Night > img {
+	width: 200px;
+	margin:0;
+}
+#Saf > a,
+#Dally > a,
+#Yomax > a,
+#Ecliptics > a,
+#Moon > a,
+#Notacya > a,
+#Night > a {
+padding: 20px 30px;
+}
+body > div > div > div:nth-child(1) {
+	margin: 0;
 }
