--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,10 +9,10 @@
 body,
 html {
 	font-family: 'Montserrat', sans-serif;
-	margin: 2rem 2rem;
+	margin: 1.5rem 2rem;
 	background-color: #e0d7ff;
 	height: 100%;
-	overflow-y: hidden;
+	overflow: hidden;
 }
 .navbar {
 	background: white !important;
@@ -51,8 +51,7 @@ body > div {
 }
 .btn {
 	margin: 10px;
-	padding: 30px;
-	font-size: 30px 60px;
+	padding: 20px;
 	text-align: center;
 	text-transform: uppercase;
 	transition: 0.5s;
@@ -64,7 +63,8 @@ body > div {
 	border: none;
 }
 .btn:hover {
-	background-position: right center; /* change the direction of the change here */
+	background-position: right center;
+	color:white; /* change the direction of the change here */
 }
 .btn {
 	background-image: linear-gradient(to right, #e0bbe4 0%, #fec8d8 51%, #e0bbe4 100%);
@@ -132,17 +132,15 @@ a.nav-link:hover::after {
 .col {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+	align-items: stretch;
+	text-align: center;
+    flex-wrap: wrap;
 }
 .col img {
 	width: 420px;
 	height: auto;
 	margin-right: 330px;
 	margin-bottom: 100px;
-}
-body > div > div > div:nth-child(1) {
-	margin-bottom: 80px;
 }
 navbar-nav me-auto mb-2 mb-lg-0 {
 	display: flex;
@@ -154,18 +152,23 @@ navbar-nav me-auto mb-2 mb-lg-0 {
 #Moon > img,
 #Notacya > img,
 #Night > img {
-	width: 200px;
+	height: 300px;
+	width:auto;
 	margin:0;
 }
-#Saf > a,
-#Dally > a,
-#Yomax > a,
-#Ecliptics > a,
-#Moon > a,
-#Notacya > a,
-#Night > a {
-padding: 20px 30px;
+#staff-page-row button {
+padding: 10px 30px;
+color:white;
+font-weight:bold;
 }
-body > div > div > div:nth-child(1) {
-	margin: 0;
+#staff-page-row button.btn{
+	background: #957dad;
+}
+#staff-page-row {
+	left: 10rem;
+	top:17rem;
+}
+#staff-page-row p{
+	color:#ababab;
+	font-size:13px;
 }
