--- a/sass/main.css
+++ b/sass/main.css
@@ -9,7 +9,7 @@
 body,
 html {
   font-family: "Montserrat", sans-serif;
-  margin: 1.5rem 2rem;
+  margin: 1rem;
   background-color: #e0d7ff;
   height: 100%;
   overflow: hidden;
@@ -25,8 +25,8 @@ html {
 }
 
 body > div {
-  margin: 0;
-  height: 100%;
+  margin-bottom: 5rem;
+  height: 43vw;
   width: 100%;
   background-color: white;
 }
@@ -34,15 +34,12 @@ body > div {
 .container-fluid {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 89vh;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: column;
-}
-
-.row {
-  position: absolute;
-  left: 20rem;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 .container-fluid h1 {
@@ -65,6 +62,10 @@ body > div {
   box-shadow: 0 0 20px #eee;
   border-radius: 100px;
   border: none;
+}
+
+.btn i {
+  margin-right: 10px;
 }
 
 .btn:hover {
@@ -143,13 +144,13 @@ a.nav-link:hover::after {
 .row {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  align-items: center;
 }
 
 .col {
   display: flex;
   flex-direction: column;
-  align-items: stretch;
+  align-items: center;
   text-align: center;
   flex-wrap: wrap;
 }
@@ -157,8 +158,6 @@ a.nav-link:hover::after {
 .col img {
   width: 420px;
   height: auto;
-  margin-right: 330px;
-  margin-bottom: 100px;
 }
 
 navbar-nav me-auto mb-2 mb-lg-0 {
@@ -166,14 +165,17 @@ navbar-nav me-auto mb-2 mb-lg-0 {
 }
 
 #Saf > img,
+#Xavi > img,
 #Dally > img,
 #Yomax > img,
 #Ecliptics > img,
 #Moon > img,
 #Notacya > img,
 #Night > img {
-  height: 300px;
-  width: auto;
+  height: 340px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
   margin: 0;
 }
 
@@ -188,11 +190,196 @@ navbar-nav me-auto mb-2 mb-lg-0 {
 }
 
 #staff-page-row {
-  left: 10rem;
-  top: 17rem;
+  display: flex;
+  flex-wrap: nowrap;
+  position: relative;
+  left: 0;
+  top: 2rem;
 }
 
 #staff-page-row p {
   color: #ababab;
   font-size: 13px;
+}
+
+#staff-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#staff-container span {
+  font-size: 30px;
+  text-transform: uppercase;
+  color: #957dad;
+}
+
+body > div > div > div:nth-child(3) > img,
+body > div > div > div:nth-child(1) > img {
+  height: 400px;
+  width: auto;
+}
+
+.col {
+  position: relative;
+}
+
+.popup {
+  position: absolute;
+  bottom: -50px;
+  background-color: rgba(254, 200, 216, 0.431372549);
+  padding: 10px;
+  border-radius: 30px;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.popup.active {
+  -webkit-animation: popup 1s ease-in-out forwards;
+          animation: popup 1s ease-in-out forwards;
+}
+
+@-webkit-keyframes popup {
+  0% {
+    opacity: 0;
+    pointer-events: none;
+  }
+  40% {
+    opacity: 1;
+    pointer-events: auto;
+  }
+  80% {
+    opacity: 1;
+    pointer-events: auto;
+  }
+  100% {
+    opacity: 0;
+    pointer-events: none;
+  }
+}
+
+@keyframes popup {
+  0% {
+    opacity: 0;
+    pointer-events: none;
+  }
+  40% {
+    opacity: 1;
+    pointer-events: auto;
+  }
+  80% {
+    opacity: 1;
+    pointer-events: auto;
+  }
+  100% {
+    opacity: 0;
+    pointer-events: none;
+  }
+}
+@media only screen and (max-width: 2600px) {
+  .container-fluid {
+    height: 90vh;
+  }
+}
+@media only screen and (max-width: 2000px) {
+  .container-fluid {
+    height: 88vh;
+  }
+}
+@media only screen and (max-width: 1600px) {
+  #Saf > img,
+#Xavi > img,
+#Dally > img,
+#Yomax > img,
+#Ecliptics > img,
+#Moon > img,
+#Notacya > img,
+#Night > img {
+    height: 270px;
+  }
+  #staff-page-row {
+    position: relative;
+  }
+  .container-fluid {
+    height: 85vh;
+  }
+}
+@media (min-width: 1400px) {
+  .container,
+.container-lg,
+.container-md,
+.container-sm,
+.container-xl,
+.container-xxl {
+    max-width: 230px;
+  }
+}
+@media only screen and (max-width: 1314px) {
+  #Saf > img,
+#Xavi > img,
+#Dally > img,
+#Yomax > img,
+#Ecliptics > img,
+#Moon > img,
+#Notacya > img,
+#Night > img {
+    height: 230px;
+  }
+  #staff-page-row {
+    position: relative;
+    width: 11rem;
+  }
+  .container-fluid {
+    height: 80vh;
+  }
+}
+@media only screen and (max-width: 1230px) {
+  #Saf > img,
+#Xavi > img,
+#Dally > img,
+#Yomax > img,
+#Ecliptics > img,
+#Moon > img,
+#Notacya > img,
+#Night > img {
+    height: 230px;
+  }
+  #staff-page-row {
+    position: relative;
+    width: 8rem;
+    left: -2rem;
+  }
+  #staff-page-row button {
+    padding: 10px 10px;
+    border-radius: 20px;
+  }
+}
+@media only screen and (max-width: 1230px) and (max-width: 992px) {
+  #Saf > img,
+#Xavi > img,
+#Dally > img,
+#Yomax > img,
+#Ecliptics > img,
+#Moon > img,
+#Notacya > img,
+#Night > img {
+    height: 220px;
+  }
+  #staff-page-row {
+    position: relative;
+    flex-wrap: nowrap;
+    left: -2rem;
+    width: 5rem;
+  }
+  #staff-page-row button,
+#staff-page-row button.btn {
+    font-size: 11px;
+    padding: 10px 20px;
+  }
+  html,
+body {
+    overflow: scroll;
+    margin: 0;
+  }
 }/*# sourceMappingURL=main.css.map */
