--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,7 +9,7 @@
 body,
 html {
 	font-family: 'Montserrat', sans-serif;
-	margin: 1.5rem 2rem;
+	margin: 1rem;
 	background-color: #e0d7ff;
 	height: 100%;
 	overflow: hidden;
@@ -22,25 +22,21 @@ html {
 	border-top-right-radius: 10px;
 	border-top-left-radius: 10px;
 }
-body > nav > div {
-}
 body > div {
-	margin: 0;
-	height: 100%;
+	margin-bottom: 5rem;
+	height: 43vw;
 	width: 100%;
 	background-color: white;
 }
 .container-fluid {
 	display: flex;
 	width: 100%;
-	height: 100%;
+	height: 89vh;
 	justify-content: center;
-	align-items: flex-start;
+	align-items: center;
 	flex-direction: column;
-}
-.row {
-	position: absolute;
-	left: 20rem;
+	border-bottom-right-radius: 10px;
+	border-bottom-left-radius: 10px;
 }
 .container-fluid h1 {
 	width: 100%;
@@ -62,9 +58,12 @@ body > div {
 	border-radius: 100px;
 	border: none;
 }
+.btn i {
+	margin-right: 10px;
+}
 .btn:hover {
 	background-position: right center;
-	color:white; /* change the direction of the change here */
+	color: white; /* change the direction of the change here */
 }
 .btn {
 	background-image: linear-gradient(to right, #e0bbe4 0%, #fec8d8 51%, #e0bbe4 100%);
@@ -127,48 +126,214 @@ a.nav-link:hover::after {
 .row {
 	display: flex;
 	flex-direction: row;
-	justify-content: center;
+	align-items: center;
 }
 .col {
 	display: flex;
 	flex-direction: column;
-	align-items: stretch;
+	align-items: center;
 	text-align: center;
-    flex-wrap: wrap;
+	flex-wrap: wrap;
 }
 .col img {
 	width: 420px;
 	height: auto;
-	margin-right: 330px;
-	margin-bottom: 100px;
 }
 navbar-nav me-auto mb-2 mb-lg-0 {
 	display: flex;
 }
+
 #Saf > img,
+#Xavi > img,
 #Dally > img,
 #Yomax > img,
 #Ecliptics > img,
 #Moon > img,
 #Notacya > img,
 #Night > img {
-	height: 300px;
-	width:auto;
-	margin:0;
+	height: 340px;
+	width: fit-content;
+	margin: 0;
 }
 #staff-page-row button {
-padding: 10px 30px;
-color:white;
-font-weight:bold;
+	padding: 10px 30px;
+	color: white;
+	font-weight: bold;
 }
-#staff-page-row button.btn{
+#staff-page-row button.btn {
 	background: #957dad;
 }
 #staff-page-row {
-	left: 10rem;
-	top:17rem;
+	display: flex;
+	flex-wrap: nowrap;
+	position: relative;
+	left: 0;
+	top: 2rem;
 }
-#staff-page-row p{
-	color:#ababab;
-	font-size:13px;
+#staff-page-row p {
+	color: #ababab;
+	font-size: 13px;
+}
+#staff-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+#staff-container span {
+	font-size: 30px;
+	text-transform: uppercase;
+	color: #957dad;
+}
+body > div > div > div:nth-child(3) > img,
+body > div > div > div:nth-child(1) > img {
+	height: 400px;
+	width: auto;
+}
+.col {
+	position: relative;
+}
+.popup {
+	position: absolute;
+	bottom: -50px;
+	background-color: #fec8d86e;
+	padding: 10px;
+	border-radius: 30px;
+	opacity: 0;
+	pointer-events: none;
+}
+.popup.active {
+	animation: popup 1s ease-in-out forwards;
+}
+
+@keyframes popup {
+	0% {
+		opacity: 0;
+		pointer-events: none;
+	}
+	40% {
+		opacity: 1;
+		pointer-events: auto;
+	}
+	80% {
+		opacity: 1;
+		pointer-events: auto;
+	}
+	100% {
+		opacity: 0;
+		pointer-events: none;
+	}
+}
+
+@media only screen and (max-width: 2600px) {
+	.container-fluid {
+		height: 90vh;
+	}
+}
+@media only screen and (max-width: 2000px) {
+	.container-fluid {
+		height: 88vh;
+	}
+}
+
+@media only screen and (max-width: 1600px) {
+	#Saf > img,
+	#Xavi > img,
+	#Dally > img,
+	#Yomax > img,
+	#Ecliptics > img,
+	#Moon > img,
+	#Notacya > img,
+	#Night > img {
+		height: 270px;
+	}
+	#staff-page-row {
+		position: relative;
+	}
+	.container-fluid {
+		height: 85vh;
+	}
+}
+@media (min-width: 1400px) {
+	.container,
+	.container-lg,
+	.container-md,
+	.container-sm,
+	.container-xl,
+	.container-xxl {
+		max-width: 230px;
+	}
+}
+@media only screen and (max-width: 1314px) {
+	#Saf > img,
+	#Xavi > img,
+	#Dally > img,
+	#Yomax > img,
+	#Ecliptics > img,
+	#Moon > img,
+	#Notacya > img,
+	#Night > img {
+		height: 230px;
+	}
+	#staff-page-row {
+		position: relative;
+		width: 11rem;
+	}
+	.container-fluid {
+		height: 80vh;
+	}
+}
+@media only screen and (max-width: 1230px) {
+	#Saf > img,
+	#Xavi > img,
+	#Dally > img,
+	#Yomax > img,
+	#Ecliptics > img,
+	#Moon > img,
+	#Notacya > img,
+	#Night > img {
+		height: 230px;
+	}
+	#staff-page-row {
+		position: relative;
+		width: 8rem;
+		left: -2rem;
+	}
+	#staff-page-row button {
+		padding: 10px 10px;
+		border-radius: 20px;
+	}
+	@media only screen and (max-width: 992px) {
+		#Saf > img,
+		#Xavi > img,
+		#Dally > img,
+		#Yomax > img,
+		#Ecliptics > img,
+		#Moon > img,
+		#Notacya > img,
+		#Night > img {
+			height: 220px;
+		}
+		#staff-page-row {
+			position: relative;
+			flex-wrap: nowrap;
+			left: -2rem;
+			width: 5rem;
+		}
+		#staff-page-row button,
+		#staff-page-row button.btn {
+			font-size: 11px;
+			padding: 10px 20px;
+		}
+		html,
+		body {
+			overflow: scroll;
+			margin: 0;
+		}
+	}
+	@media only screen and (max-width: 768px) {
+	}
+
+	@media only screen and (max-width: 600px) {
+	}
 }
